fixed for CHLK-3569 Teacher. Grades. Missing Assignments Report. Field for a text is cut off.

--- a/Chalkable.Web/assets/sass2/3_molecules/_select.sass
+++ b/Chalkable.Web/assets/sass2/3_molecules/_select.sass
@@ -1,4 +1,7 @@
 body
+  .chzn-container-multi .chzn-choices li.search-field input
+    line-height: 100%
+
   .chzn-container-single
     .chzn-single
       height: 30px
